--- a/quote.html
+++ b/quote.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email Sender</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">   
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+    <link rel="stylesheet" href="styles/quote_style.css"> 
 </head>
 <body class="bg-gray-100">
     <div class="container mx-auto p-4">
-        <form id="emailForm" class="max-w-md mx-auto bg-white p-8 rounded-md shadow-md mt-16">
+        <!-- Back Button -->
+        <a href="index.html" style="position: absolute; top: 40px; left: 50px;" class="bg-red-500 hover:bg-red-700 focus:outline-none focus:ring focus:border-red-300 text-white px-4 py-2 rounded-md mb-4 inline-block" id="back-btn">Back</a>
+
+        <form id="emailForm" class="max-w-md mx-auto bg-white p-8 rounded-md shadow-md mt-16" style="margin-top: 20px;">
             <div class="mb-4">
                 <label for="sendTo" class="block text-gray-700 text-sm font-bold mb-2">Send to:</label>
                 <input type="email" class="form-input w-full border rounded-md px-3 py-2" id="sendTo" required oninput="validateEmail()">
