--- a/index.html
+++ b/index.html
@@ -3,219 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email Sender</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-    <style>
-        .highlighted {
-            background-color: yellow; /* Adjust the color as needed */
-        }
-    </style>    
-</head>
-<body class="bg-gray-100">
-    <div class="container mx-auto p-4">
-        <form id="emailForm" class="max-w-md mx-auto bg-white p-8 rounded-md shadow-md mt-16">
-            <div class="mb-4">
-                <label for="sendTo" class="block text-gray-700 text-sm font-bold mb-2">Send to:</label>
-                <input type="email" class="form-input w-full border rounded-md px-3 py-2" id="sendTo" required oninput="validateEmail()">
-            </div>
-
-            <div class="mb-4">
-                <label for="cc" class="block text-gray-700 text-sm font-bold mb-2">CC:</label>
-                <input type="email" class="form-input w-full border rounded-md px-3 py-2" id="cc" oninput="validateEmail()">
-            </div>
-
-            <div class="mb-4">
-                <label for="subject" class="block text-gray-700 text-sm font-bold mb-2">Subject:</label>
-                <input type="text" class="form-input w-full border rounded-md px-3 py-2" id="subject" required value="Repair ">
-            </div>
-
-            <div class="mb-4">
-                <label for="body" class="block text-gray-700 text-sm font-bold mb-2">Body:</label>
-                <select class="form-select w-full border rounded-md px-3 py-2" id="body">
-<option value=
-"Hello,
-
-We've sent the quote for the repair of your equipment.
-
-Your answer matters! If you have any questions, feel free to reach out.
-
-Repair tag:
-
-Kind regards,
-
-
-** Pour assurer un suivi adéquat, veuillez nous envoyer votre réponse à ce courriel. Merci **
-** To ensure a proper follow-up, please send your answer on this email. Thank you **
-"
->EN - Quotes</option>
-
-<!-- English Final Quote-->
-<option value=
-"Hello,
-
-We've sent the quote for the repair of your equipment.
-
-This is our final attempt to reach you, if we don't get a response within 7 days, we will return the equipment unrepaired.
-
-Your answer matters! If you have any questions, feel free to reach out.
-
-Repair tag:
-
-Kind regards,
-
-
-** Pour assurer un suivi adéquat, veuillez nous envoyer votre réponse à ce courriel. Merci **
-** To ensure a proper follow-up, please send your answer on this email. Thank you **
-"
->EN - Final Quote</option>
-<!-- French First Quote-->
-<option value=
-"Bonjour,
-
-Nous avons envoyé l'estimation pour la réparation de votre équipement.
-
-Votre réponse est importante! Si vous avez des questions n'hésitez pas à nous contacter.
-
-Billet de réparation:
-
-Cordialement,
-
-
-** Pour assurer un suivi adéquat, veuillez nous envoyer votre réponse à ce courriel. Merci **
-** To ensure a proper follow-up, please send your answer on this email. Thank you **
-"
->FR - Estimations</option>
-
-<!-- French Last Quote-->
-<option value=
-"Bonjour,
-
-Nous avons envoyé l'estimation pour la réparation de votre équipement.
-
-Ceci est notre dernière tentative pour vous joindre, si nous n'obtenons pas de réponse dans les 7 jours, nous vous retournerons l'équipement non réparé.
-
-Votre réponse est importante! Si vous avez des questions n'hésitez pas à nous contacter.
-
-Billet de réparation:
-
-Cordialement,
-
-
-** Pour assurer un suivi adéquat, veuillez nous envoyer votre réponse à ce courriel. Merci **
-** To ensure a proper follow-up, please send your answer on this email. Thank you **
-"
->FR - Estimation finale</option>
-
-                </select>
-            </div>
-
-            <button type="button" class="bg-green-500 text-white px-4 py-2 rounded-md" onclick="composeEmail()">Compose Email</button>
-        </form>
-
-        <!-- New Section for Acceptation -->
-        <div class="max-w-md mx-auto bg-white p-8 rounded-md shadow-md mt-8">
-            <h2 class="text-xl font-bold mb-4">Acceptation</h2>
-
-            <!-- Button for French -->
-            <button class="bg-blue-500 hover:bg-blue-700 focus:outline-none focus:ring focus:border-blue-300 text-white px-4 py-2 rounded-md mr-2" onclick="copyToClipboard('FR - Acceptation', `
-Bonjour,
-
-Merci pour votre réponse. Nous avons commandé les pièces pour votre réparation et dès leur réception, nous allons procéder à la réparation de votre appareil et vous le retourner.
-
-Merci et bonne journé
-
-
-** Pour assurer un suivi adéquat, veuillez nous envoyer votre réponse à ce courriel. Merci **
-** To ensure a proper follow-up, please send your answer on this email. Thank you **
-            `)">Français</button>
-
-            <!-- Button for English -->
-            <button class="bg-green-500 hover:bg-green-700 focus:outline-none focus:ring focus:border-green-300 text-white px-4 py-2 rounded-md" onclick="copyToClipboard('EN - Acceptation', `
-Hello,
-
-Thank you for your response. Parts have been ordered for your repair and as soon as we receive them, we will proceed with the repair and return the unit to you.
-
-Thank you and have a nice day
-
-
-** Pour assurer un suivi adéquat, veuillez nous envoyer votre réponse à ce courriel. Merci **
-** To ensure a proper follow-up, please send your answer on this email. Thank you **
-            `)">English</button>
-
-<!-- Checkmark and Copied message -->
-<div class="hidden inline-block" id="copiedMessageWrapper" style="float: right; margin-bottom: 10px;">
-    <div id="copiedMessage">
-        <svg class="fill-current text-green-500 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M0 11l2-2 5 5L18 3l2 2L7 18z"/></svg>
-        <span class="text-green-500 ml-1">Copied</span>
-    </div>
-</div>
-
-
-
-
-        </div>
-    </div>
-
+    <title>National Repair Center</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script>
-        function composeEmail() {
-            var sendTo = document.getElementById('sendTo').value;
-            var cc = document.getElementById('cc').value;
-            var subject = document.getElementById('subject').value;
-            var bodyTemplate = document.getElementById('body');
-
-            var selectedTemplate = bodyTemplate.value;
-            var placeholder = (selectedTemplate.includes('Billet de réparation:')) ? 'Billet de réparation:' : 'Repair tag:';
-            var numericPart = subject.replace(/\D/g, '');
-            var updatedBody = selectedTemplate.replace(placeholder, placeholder + ' ' + numericPart);
-            var updatedSubject = (selectedTemplate.includes('Bonjour')) ? 'Réparation ' + numericPart : 'Repair ' + numericPart;
-
-            var mailtoLink = 'mailto:' + encodeURIComponent(sendTo) +
-                            (cc ? '?cc=' + encodeURIComponent(cc) : '') + // Use ? if CC exists, otherwise, no query parameter
-                            '&subject=' + encodeURIComponent(updatedSubject) +
-                            '&body=' + encodeURIComponent(updatedBody);
-
-            window.open(mailtoLink, '_blank');
-        }
-
-
-        function validateEmail() {
-            var sendToInput = document.getElementById('sendTo');
-            var isValidEmail = isValidEmailAddress(sendToInput.value);
-    
-            // Change border color based on email validity
-            if (isValidEmail) {
-                sendToInput.style.border = '2px solid #4CAF50'; // Green border for a valid email
-            } else {
-                sendToInput.style.border = '2px solid #f44336'; // Red border for an invalid email
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+                navy: '#003767',
+                lightBlue: '#00A8E1',
+                grayText: '#58585B',
+                secBlue: '#147EC2',
+                secLightBlue: '#6DCFF6',
+                secGray: '#ECECEC'
+              }
             }
+          }
         }
+      </script>
+</head>
+<body class="bg-sec-gray text-gray-text">
 
-        function isValidEmailAddress(email) {
-            // Basic email validation, you can enhance this as needed
-            var regex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-            return regex.test(email);
-        }
+    <header class="bg-navy text-white text-center py-4">
+        <h1 class="text-2xl font-bold">National Repair Center</h1>
+    </header>
 
-        function copyToClipboard(key, text) {
-        var textarea = document.createElement('textarea');
-        textarea.value = text;
-        document.body.appendChild(textarea);
-        textarea.select();
-        document.execCommand('copy');
-        document.body.removeChild(textarea);
+    <div class="container mx-auto mt-8 flex flex-wrap justify-center">
 
-        var copiedMessageWrapper = document.getElementById('copiedMessageWrapper');
+        <!-- Card for quote.html -->
+        <a href="quote.html" class="bg-lightBlue w-64 mx-2 mb-8 rounded-md overflow-hidden shadow-md flex flex-col">
+            <div class="bg-sec-light-blue p-4">
+                <h2 class="text-white font-bold text-lg">Quote Application</h2>
+            </div>
+            <div class="flex-grow p-4">
+                <p class="text-gray-text">Manage and send repair quotes efficiently.</p>
+            </div>
+            <div class="bg-sec-blue py-2 text-white text-center rounded-b-md">
+                Go to Quote
+            </div>
+        </a>
 
-        // Check if the element exists and is not null before modifying its style
-        if (copiedMessageWrapper !== null && typeof copiedMessageWrapper !== 'undefined') {
-            copiedMessageWrapper.style.display = 'inline-block';
+        <!-- Add more cards for other applications as needed -->
 
-            setTimeout(function () {
-                copiedMessageWrapper.style.display = 'none';
-            }, 5000);
-        }
-    }
+    </div>
 
-    </script>
 </body>
 </html>
