--- a/quote.html
+++ b/quote.html
@@ -10,7 +10,7 @@
 <body class="bg-gray-100">
     <div class="container mx-auto p-4">
         <!-- Back Button -->
-        <a href="index.html" style="position: absolute; top: 40px; left: 50px;" class="bg-red-500 hover:bg-red-700 focus:outline-none focus:ring focus:border-red-300 text-white px-4 py-2 rounded-md mb-4 inline-block" id="back-btn">Back</a>
+        <a href="index.html" class="bg-red-500 hover:bg-red-700 focus:outline-none focus:ring focus:border-red-300 text-white px-4 py-2 rounded-md mb-1 inline-block" id="back-btn">Back</a>
 
         <form id="emailForm" class="max-w-md mx-auto bg-white p-8 rounded-md shadow-md mt-16" style="margin-top: 20px;">
             <div class="mb-4">
