--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container mx-auto mt-8 flex flex-wrap justify-center">
 
         <!-- Card for quote.html -->
-        <a href="quote.html" class="bg-lightBlue w-64 mx-2 mb-8 rounded-md overflow-hidden shadow-md flex flex-col">
+        <a href="quote.html" class="bg-sky-500 hover:bg-sky-600 w-64 mx-2 mb-8 rounded-md overflow-hidden shadow-md flex flex-col">
             <div class="bg-sec-light-blue p-4">
                 <h2 class="text-white font-bold text-lg">Quote Application</h2>
             </div>
