--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -43,6 +44,32 @@
                 Go to Quote
             </div>
         </a>
+
+        <!-- Card for approval.html -->
+        <a href="approval.html" class="bg-cyan-500 hover:bg-cyan-700 w-64 mx-2 mb-8 rounded-md overflow-hidden shadow-md flex flex-col">
+            <div class="bg-sec-light-blue p-4">
+                <h2 class="text-white font-bold text-lg">Approval tool</h2>
+            </div>
+            <div class="flex-grow p-4">
+                <p class="text-gray-text">Keep track of your Ready for Repair to modify P.O.s</p>
+            </div>
+            <div class="bg-sec-blue py-2 text-white text-center rounded-b-md">
+                Go to List
+            </div>
+        </a>
+
+        <!-- Card for shipping.html
+        <a href="shipping.html" class="bg-indigo-400 hover:bg-indigo-500 w-64 mx-2 mb-8 rounded-md overflow-hidden shadow-md flex flex-col">
+            <div class="bg-sec-light-blue p-4">
+                <h2 class="text-white font-bold text-lg">Expedition List</h2>
+            </div>
+            <div class="flex-grow p-4">
+                <p class="text-gray-text">Fill and print the expedition list for shipping.</p>
+            </div>
+            <div class="bg-sec-blue py-2 text-white text-center rounded-b-md">
+                Go to List
+            </div>
+        </a> -->
 
         <!-- Add more cards for other applications as needed -->
 
