--- a/quote.html
+++ b/quote.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NRC Quotes</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+    <title>Email Sender</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles/quote_style.css"> 
 </head>
 <body class="bg-gray-100">
@@ -25,12 +25,17 @@
 
             <div class="mb-4">
                 <label for="subject" class="block text-gray-700 text-sm font-bold mb-2">Subject:</label>
-                <input type="text" class="form-input w-full border rounded-md px-3 py-2" id="subject" required value="Repair ">
+                <input type="text" class="form-input w-full border rounded-md px-3 py-2" id="subject" required value="Tag: ">
             </div>
 
             <div class="mb-4">
                 <label for="body" class="block text-gray-700 text-sm font-bold mb-2">Body:</label>
                 <select class="form-select w-full border rounded-md px-3 py-2" id="body">
+
+
+
+
+
 <option value=
 "Hello,
 
@@ -66,7 +71,6 @@ Kind regards,
 
 ** Pour assurer un suivi adéquat, veuillez nous envoyer votre réponse à ce courriel. Merci **
 ** To ensure a proper follow-up, please send your answer on this email. Thank you **
-
 "
 >EN - Final Quote</option>
 <!-- French First Quote-->
@@ -84,7 +88,6 @@ Cordialement,
 
 ** Pour assurer un suivi adéquat, veuillez nous envoyer votre réponse à ce courriel. Merci **
 ** To ensure a proper follow-up, please send your answer on this email. Thank you **
-
 "
 >FR - Estimations</option>
 
@@ -105,7 +108,6 @@ Cordialement,
 
 ** Pour assurer un suivi adéquat, veuillez nous envoyer votre réponse à ce courriel. Merci **
 ** To ensure a proper follow-up, please send your answer on this email. Thank you **
-
 "
 >FR - Estimation finale</option>
 
@@ -130,7 +132,6 @@ Merci et bonne journé
 
 ** Pour assurer un suivi adéquat, veuillez nous envoyer votre réponse à ce courriel. Merci **
 ** To ensure a proper follow-up, please send your answer on this email. Thank you **
-
             `)">Français</button>
 
             <!-- Button for English -->
@@ -144,7 +145,6 @@ Thank you and have a nice day
 
 ** Pour assurer un suivi adéquat, veuillez nous envoyer votre réponse à ce courriel. Merci **
 ** To ensure a proper follow-up, please send your answer on this email. Thank you **
-
             `)">English</button>
 
     <!-- Checkmark and Copied message -->
