--- a/quote.html
+++ b/quote.html
@@ -35,7 +35,7 @@
 
 
 
-
+<!-- English first Quote-->
 <option value=
 "Hello,
 
@@ -92,6 +92,16 @@ Cordialement,
 ** To ensure a proper follow-up, please send your answer on this email. Thank you **
 "
 >FR - Estimations</option>
+
+<!-- French First Quote-->
+<option value=
+"ouioui
+
+
+** Pour assurer un suivi adéquat, veuillez nous envoyer votre réponse à ce courriel. Merci **
+** To ensure a proper follow-up, please send your answer on this email. Thank you **
+"
+>FR - allo</option>                    
 
 <!-- French Last Quote-->
 <option value=
