--- a/quote.html
+++ b/quote.html
@@ -33,7 +33,7 @@
                 <select class="form-select w-full border rounded-md px-3 py-2" id="body">
 
 
-
+<!-- //////////////////////////////////////////////////////////////////////////////  -->
 
 <!-- English first Quote-->
 <option value=
@@ -91,17 +91,7 @@ Cordialement,
 ** Pour assurer un suivi adéquat, veuillez nous envoyer votre réponse à ce courriel. Merci **
 ** To ensure a proper follow-up, please send your answer on this email. Thank you **
 "
->FR - Estimations</option>
-
-<!-- French First Quote-->
-<option value=
-"ouioui
-
-
-** Pour assurer un suivi adéquat, veuillez nous envoyer votre réponse à ce courriel. Merci **
-** To ensure a proper follow-up, please send your answer on this email. Thank you **
-"
->FR - allo</option>                    
+>FR - Estimations</option>                   
 
 <!-- French Last Quote-->
 <option value=
@@ -122,6 +112,19 @@ Cordialement,
 ** To ensure a proper follow-up, please send your answer on this email. Thank you **
 "
 >FR - Estimation finale</option>
+
+<!-- Commentaire-->
+<option value=
+"
+    
+"
+>Option</option> 
+
+
+
+
+
+<!-- //////////////////////////////////////////////////////////////////////////////  -->
 
                 </select>
             </div>
