--- a/quote.html
+++ b/quote.html
@@ -34,8 +34,11 @@
 
 
 <!-- //////////////////////////////////////////////////////////////////////////////  -->
+<!-- 
+      Options to select from the dropdown menu.              
+-->                   
 
-<!-- English first Quote-->
+<!-- English - Quote 1 -->
 <option value=
 "Hello,
 
@@ -54,7 +57,7 @@ Kind regards,
 "
 >EN - Quotes</option>
 
-<!-- English Final Quote-->
+<!-- English - Final Quote-->
 <option value=
 "Hello,
 
@@ -75,7 +78,7 @@ Kind regards,
 >EN - Final Quote</option>
 
                     
-<!-- French First Quote-->
+<!-- French - Quote 1 -->
 <option value=
 "Bonjour,
 
@@ -93,7 +96,7 @@ Cordialement,
 "
 >FR - Estimations</option>                   
 
-<!-- French Last Quote-->
+<!-- French - Final Quote-->
 <option value=
 "Bonjour,
 
@@ -113,6 +116,7 @@ Cordialement,
 "
 >FR - Estimation finale</option>
 
+                    
 <!-- Commentaire-->
 <option value=
 "
